# video_ffmpeg_openal_opengl

./: CMakeLists.txt  main.cpp  main2.cpp  main_很大声.cpp  outfile.pcm
cmake/: FindFFMPEG.cmake  FindOpenALSoft.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
includes/learnopengl/: filesystem.h
src/: isFFmpegOk.cpp  mp3ToPcm.cpp  play.cpp
src/common/: alhelpers.cpp  alhelpers.h
